# imessage-mcp

./: README.md  extract_chats.py  extract_contacts.py  generate_embedding_vectors.py  hello.py  load_chats_to_db.py  main.py  raw_sql_file_sample_queries.py
chroma-imessage/: .gitignore  README.md  app.py  hello.py  pyproject.toml  test_server.py
imessage_service/: README.md  pyproject.toml
imessage_service/src/imessage_service/: server.py
