[project]
name = "chroma-imessage"
version = "0.1.0"
description = "FastAPI server with ChromaDB and local embeddings"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=3.3.1",
    "requests>=2.31.0"
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
chromadb = "^0.4.22"
pydantic = "^2.5.3"
sentence-transformers = "^2.2.2"
torch = "^2.1.0"
transformers = "^4.36.0"
